<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene">

    <TextView
        android:id="@+id/registerScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_screen"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameBox"
        android:layout_width="369dp"
        android:layout_height="55dp"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/registerScreen"
        app:layout_constraintTop_toBottomOf="@+id/registerScreen"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/emailAddressBox"
        android:layout_width="369dp"
        android:layout_height="55dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userNameBox"
        app:layout_constraintTop_toBottomOf="@+id/userNameBox" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="368dp"
        android:layout_height="62dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddressBox"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPasswordBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintBottom_toTopOf="@+id/validateBtn">

        <RadioButton
            android:id="@+id/employerRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employer" />

        <RadioButton
            android:id="@+id/employeeRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/employee" />

    </RadioGroup>

    <Button
        android:id="@+id/validateBtn"
        android:layout_width="380dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.motion.widget.MotionLayout>